--- a/GestampPrueba2Front/src/app/login/login.page.html
+++ b/GestampPrueba2Front/src/app/login/login.page.html
@@ -17,7 +17,7 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input name="nombreUsuario" type="text" placeholder="Nombre usuario" ngModel required></ion-input>
+              <ion-input name="nombreUsuario" type="text" placeholder="Nombre usuario" autofocus ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-input name="contrasena" type="password" placeholder="Contraseña" ngModel required></ion-input>
