--- a/GestampPrueba2Front/src/app/modal/modal.page.html
+++ b/GestampPrueba2Front/src/app/modal/modal.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="primary">
     </ion-buttons>
     <ion-title>Actualizar Persona</ion-title>
+    <ion-button slot="end" (click)="closeModal()">Close Modal</ion-button>
   </ion-toolbar>
 
 </ion-header>
