--- a/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
+++ b/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
@@ -4,6 +4,7 @@
       <ion-menu-button autoHide="false"></ion-menu-button>
     </ion-buttons>
     <ion-title>Usuarios</ion-title>
+    <ion-button slot="end" (click)="logOut()">LogOut</ion-button>
   </ion-toolbar>
 </ion-header>
 
