--- a/GestampPrueba2Front/src/app/app.component.html
+++ b/GestampPrueba2Front/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Gestamp</ion-list-header>
-          <ion-note>cpuga@gmail.com</ion-note>
+          <ion-note>administrador@admin.com</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
