--- a/GestampPrueba2Front/src/app/login/login.page.html
+++ b/GestampPrueba2Front/src/app/login/login.page.html
@@ -30,10 +30,9 @@
       </ion-row>
       <ion-row justify-content-center>
         <div>
-        ¡Si no tienes una cuenta <a routerLink='/register'>
-        registrate</a> primero!
+        ¡Si no tienes una cuenta <a routerLink='/register'>registrate</a> primero!
         </div>
-    </ion-row>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
