--- a/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
+++ b/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
@@ -10,7 +10,7 @@
 
 <ion-content>
   <h3>Usuarios (Tabla usuarios)</h3>
-  <table class="table table-striped" >
+  <table class="table table-striped">
     <thead>
       <tr class="ion-justify-content-center">
         <th>Id</th>
@@ -29,7 +29,7 @@
         <td>{{ usuario.email }}</td>
         <td><ion-toggle name="activo" color="light" [checked]="usuario.activo" (click)="modificar(usuario)"></ion-toggle> </td>
         <td><img src="{{ usuario.img }}"/></td>
-        <!--<td><button type="button" class="btn btn-info" (click)="mostrar(persona)"> Mostrar</button></td>-->
+        <td><button type="button" class="btn btn-danger" (click)="delete(usuario)"> Borrar</button></td>
       </tr>
     </tbody>
   </table>
