--- a/GestampPrueba2Front/src/app/login/login.page.html
+++ b/GestampPrueba2Front/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button autoHide="false"></ion-menu-button>
+      <ion-menu-button *ngIf="identificado" autoHide="false"></ion-menu-button>
     </ion-buttons>
     <ion-title>Login</ion-title>
   </ion-toolbar>
@@ -15,7 +15,7 @@
           <div text-center>
             <h3>Login</h3>
           </div>
-          <div padding>
+          <div padding class="form-group">
             <ion-item>
               <ion-input name="nombreUsuario" type="text" placeholder="Nombre usuario" autofocus ngModel required></ion-input>
             </ion-item>
@@ -23,7 +23,11 @@
               <ion-input name="contrasena" type="password" placeholder="Contraseña" ngModel required></ion-input>
             </ion-item>
           </div>
-          <div padding>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" [disabled]="form.invalid">
+            <label class="form-check-label" for="defaultCheck2">No mantener sesion iniciada</label>
+          </div>
+          <div padding class="form-group">
             <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
           </div>
         </ion-col>
