--- a/GestampPrueba2Front/src/app/register/register.page.html
+++ b/GestampPrueba2Front/src/app/register/register.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <form #form="ngForm" (ngSubmit)="register(form)">
+  <form [formGroup]="form" (ngSubmit)="register(form)" novalidate>
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -17,20 +17,20 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input name="nombreUsuario" type="text" placeholder="Nombre usuario" ngModel required></ion-input>
+              <ion-input formControlName="nombreUsuario" name="nombreUsuario" type="text" placeholder="Nombre usuario" required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="contrasena" type="password" placeholder="Contraseña" ngModel required></ion-input>
+              <ion-input formControlName="contrasena" name="contrasena" type="password" placeholder="Contraseña" required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="email" type="email" placeholder="Correo electronico" ngModel required></ion-input>
+              <ion-input formControlName="email" name="email" type="email" placeholder="Correo electronico" required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-input name="img" type="text" placeholder="Introduzca la ruta de una imagen" ngModel required></ion-input>
+              <ion-input formControlName="img" name="img" type="text" placeholder="Introduzca la ruta de una imagen" required></ion-input>
             </ion-item>
           </div>
           <div padding>
-            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Registrarse</ion-button>
+            <ion-button size="large" type="submit"  expand="block">Registrarse</ion-button>
           </div>
         </ion-col>
       </ion-row>
