--- a/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
+++ b/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
@@ -10,6 +10,22 @@
 
 <ion-content>
   <h3>Usuarios (Tabla usuarios)</h3>
+  <p-toolbar>
+    <div class="ui-toolbar-group-left">
+        <button pButton type="button" label="New" icon="pi pi-plus"></button>
+        <button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>
+            
+        <i class="pi pi-bars"></i>
+        
+        <p-splitButton label="Save" icon="pi pi-check" [model]="items" styleClass="ui-button-warning"></p-splitButton>
+    </div>
+    
+    <div class="ui-toolbar-group-right">
+        <button pButton type="button" icon="pi pi-search"></button>
+        <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
+        <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+    </div>
+</p-toolbar>
   <table class="table table-striped">
     <thead>
       <tr class="ion-justify-content-center">
