--- a/GestampPrueba2Front/src/app/login/login.page.html
+++ b/GestampPrueba2Front/src/app/login/login.page.html
@@ -29,8 +29,8 @@
             <label class="form-check-label" for="defaultCheck2">No mantener sesion iniciada</label>
           </div>
           <div padding class="form-group">
-            <ion-button pButton size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
-            <a routerLink='/register'><ion-button pButton size="large" expand="block">Resgistrarse</ion-button></a>
+            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+            <a routerLink='/register'><ion-button size="large" expand="block">Resgistrarse</ion-button></a>
           </div>
         </ion-col>
       </ion-row>
