--- a/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
+++ b/GestampPrueba2Front/src/app/usuarios/usuarios.page.html
@@ -27,7 +27,7 @@
     </div>
 </p-toolbar>
 
-<p-table #dt [columns]="cols" [loading]="loading" [lazy]="lazy" styleClass="ui-table-cars" [value]="usersArray" [paginator]="true" [rows]="10" dataKey="vin" selectionMode="single" [(selection)]="selectedUser">
+<p-table #dt [columns]="cols" [loading]="loading" (onLazyLoad)="loadData($event)" [lazy]="lazy" styleClass="ui-table-cars" [value]="usersArray" [paginator]="true" [rows]="10" dataKey="id" selectionMode="single" [(selection)]="selectedUser">
   <ng-template pTemplate="caption">
       List of Users
       <div class="ui-table-globalfilter-container">
@@ -53,13 +53,38 @@
               <img src="{{rowData.img}}" style="width: 36px; margin-right: 1em; vertical-align: middle;">
           </td>
           <td>
-              <button pButton type="button" class="ui-button-success" icon="pi pi-search" style="margin-right: .5em"></button>
+              <button pButton type="button" (click)="showDialog()" class="ui-button-success" icon="pi pi-search" style="margin-right: .5em"></button>
               <button pButton type="button" (click)="delete(rowData)" class="ui-button-warning" icon="pi pi-pencil"></button>
           </td>
       </tr>
   </ng-template>
 </p-table>
 
+<p-dialog header="Title" [(visible)]="display">
+  <form #form="ngForm" (ngSubmit)="guardar()">
+    <ion-item>
+      <ion-label>Id: </ion-label>
+      <ion-input  [(ngModel)]="usuario.id" name="id" disabled required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Nombre: </ion-label>
+      <ion-input type="text" [(ngModel)]="usuario.nombreUsuario" name="nombreUsuario" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Contraseña: </ion-label>
+      <ion-input type="text" [(ngModel)]="usuario.contrasena" name="contrasena" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Activo: </ion-label>
+      <ion-input type="number" [(ngModel)]="usuario.activo" name="activo" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Imagen: </ion-label>
+      <ion-input type="text" [(ngModel)]="usuario.img" name="img" required></ion-input>
+    </ion-item>
+    <ion-button  size="large" type="submit" expand="block" >Actualizar</ion-button>
+  </form>
+</p-dialog>
 
 
 
